--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^12.5.1"
+    "cypress": "^12.5.1",
+    "cypress-mochawesome-reporter": "^3.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0"
